import { Collection } from "./collection.entity";
import { UserRole } from "./user-role.enum";

export class User {
  firstName: string;
  lastName: string;
  username: string;
  email: string;
  role: UserRole;
  reputation: number;
  collection: Collection | null;

  constructor(
    firstName: string,
    lastName: string,
    username: string,
    email: string,
    role: UserRole = UserRole.STANDARD,
    reputation = 0,
    collection: Collection | null = null,
  ) {
    this.firstName = firstName;
    this.lastName = lastName;
    this.username = username;
    this.email = email;
    this.role = role;
    this.reputation = reputation;
    this.collection = collection;
  }
}
